--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,10 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 find_package(Flann REQUIRED)
 include_directories(${FLANN_INCLUDE_DIR})
 
+find_package(FFTW REQUIRED)
+include_directories(${FFTW_INCLUDE_DIR})
+
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 ADD_EXECUTABLE(run_segmentation src/RunSegmentation.cc)
-TARGET_LINK_LIBRARIES(run_segmentation ${FLANN_LIBS})
+TARGET_LINK_LIBRARIES(run_segmentation ${FLANN_LIBS} ${FFTW_LIBS})
