Scale input for fftw. Scale ACF by ACF[0] as in Matlab. Use 16-byte alignment for fftw-eigen3 compatibility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 PROJECT( rlfd_segmentation )
 
 if(CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "-lpthread -std=c++11 -Wno-enum-compare -O2 -Wall")
+    set(CMAKE_CXX_FLAGS "-std=c++11 -Wno-enum-compare -g -Wall")
 endif()
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
