Simple command line program to generate Lorenz attractor solved with fourth order Runge-Kutta integrator. Step size can be specified as a parameter.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ include_directories(${FFTW_INCLUDES})
 find_package(Boost REQUIRED)
 include_directories(${BOOST_INCLUDE_DIR})
 
+include_directories(${CMAKE_SOURCE_DIR}/external/odeint)
+
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 ADD_EXECUTABLE(run_segmentation src/RunSegmentation.cc)
@@ -29,3 +31,5 @@ TARGET_LINK_LIBRARIES(test_autocorrelation ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lma
 
 ADD_EXECUTABLE(run_averagedisplacement src/RunAverageDisplacement.cc)
 TARGET_LINK_LIBRARIES(run_averagedisplacement ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lmatio -lz")
+
+ADD_EXECUTABLE(lorenz src/Lorenz.cc)
