Renaming of the runtime files to get rid of the run_ prefix.Outputting to bin/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,14 @@
 cmake_minimum_required(VERSION 2.6)
+
 PROJECT( rlfd_segmentation )
+
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "-std=c++11 -Wno-enum-compare -g -Wall")
 endif()
-
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
@@ -23,13 +26,13 @@ include_directories(${CMAKE_SOURCE_DIR}/external/odeint)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-ADD_EXECUTABLE(run_segmentation src/RunSegmentation.cc)
-TARGET_LINK_LIBRARIES(run_segmentation ${FLANN_LIBS} ${FFTW_LIBRARIES} ${BOOST_LIBRARIES})
+ADD_EXECUTABLE(ts-segment src/TimeSeriesSegmentation.cc)
+TARGET_LINK_LIBRARIES(ts-segment ${FLANN_LIBS} ${FFTW_LIBRARIES} ${BOOST_LIBRARIES})
 
-ADD_EXECUTABLE(test_autocorrelation src/TestAutocorrelation.cc)
-TARGET_LINK_LIBRARIES(test_autocorrelation ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lmatio -lz")
+ADD_EXECUTABLE(average-displacement src/AverageDisplacement.cc)
+TARGET_LINK_LIBRARIES(average-displacement ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lmatio -lz")
 
-ADD_EXECUTABLE(run_averagedisplacement src/RunAverageDisplacement.cc)
-TARGET_LINK_LIBRARIES(run_averagedisplacement ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lmatio -lz")
+ADD_EXECUTABLE(autocorrelation src/Autocorrelation.cc)
+TARGET_LINK_LIBRARIES(autocorrelation ${FFTW_LIBRARIES} "-lmatio -lz")
 
 ADD_EXECUTABLE(lorenz src/Lorenz.cc)
