Added unified support for reading .mat and .dat files and a utility to list the content of those files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,6 @@ ADD_EXECUTABLE(autocorrelation src/Autocorrelation.cc)
 TARGET_LINK_LIBRARIES(autocorrelation ${FFTW_LIBRARIES} "-lmatio -lz")
 
 ADD_EXECUTABLE(lorenz src/Lorenz.cc)
+
+ADD_EXECUTABLE(catmat src/CatMat.cc)
+TARGET_LINK_LIBRARIES(catmat "-lmatio -lz")
