Add the increasing-embedded utility to the build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,13 @@ ADD_EXECUTABLE(average-displacement src/AverageDisplacement.cc)
 TARGET_LINK_LIBRARIES(average-displacement ${FFTW_LIBRARIES} "-lmatio -lz")
 
 ADD_EXECUTABLE(gamma-test src/GammaTest.cc)
-TARGET_LINK_LIBRARIES(gamma-test ${FFTW_LIBRARIES} ${FLANN_LIBS} "-lmatio -lz")
+TARGET_LINK_LIBRARIES(gamma-test ${FLANN_LIBS} "-lmatio -lz")
 
 ADD_EXECUTABLE(delay-embedding src/DelayEmbedding.cc)
 TARGET_LINK_LIBRARIES(delay-embedding "-lmatio -lz")
+
+ADD_EXECUTABLE(increasing-embedding src/IncreasingEmbedding.cc)
+TARGET_LINK_LIBRARIES(increasing-embedding "-lmatio -lz")
 
 ADD_EXECUTABLE(mattodat src/MatToDat.cc)
 TARGET_LINK_LIBRARIES(mattodat "-lmatio -lz")
