Add a command-line utility to compute the c-segmentation algorithm
The distance matrix is read from a file passed with the --distance-matrix
argument. The prototypes are printed on STDOUT.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,12 @@ include_directories(${CMAKE_SOURCE_DIR}/external/odeint)
 ADD_EXECUTABLE(kohlmorgen-lemm src/KohlmorgenLemm.cc)
 TARGET_LINK_LIBRARIES(kohlmorgen-lemm ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lmatio -lz")
 
+ADD_EXECUTABLE(csegmentation src/CSegmentation.cc)
+TARGET_LINK_LIBRARIES(csegmentation ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lmatio -lz")
+
+ADD_EXECUTABLE(gaussiankde src/GaussianKDE.cc)
+TARGET_LINK_LIBRARIES(gaussiankde ${FLANN_LIBS} ${FFTW_LIBRARIES} "-lmatio -lz")
+
 ADD_EXECUTABLE(autocorrelation src/Autocorrelation.cc)
 TARGET_LINK_LIBRARIES(autocorrelation ${FFTW_LIBRARIES} "-lmatio -lz")
 
